security question functionality fix

--- a/src/app/pages/user-registration/user-registration.component.css
+++ b/src/app/pages/user-registration/user-registration.component.css
@@ -14,15 +14,20 @@ small {
   margin-top: 10px;
 }
 
-.credentialsRow {
+/* .credentialsRow {
   width: 100%;
   margin: 4px auto;
   display: block;
-}
+} */
 
 .formInput {
-  width: 40%;
+  width: 80%;
   padding: 0px 10px;
+
+}
+
+.autoMargin {
+  margin: 4px auto;
 }
 
 .addressInput {
