--- a/src/app/pages/contact-us/contact-us.component.css
+++ b/src/app/pages/contact-us/contact-us.component.css
@@ -1,3 +1,12 @@
+/*
+============================================
+; Title: WEB	450	Bob’s	Computer	Repair	Shop
+; Author: Ethan Townsend, Lea Trueworthy, Natasha Whitmer, and Jason Sullenger
+; Date: 17 October 2019
+; Description: End-to-end billing system for Bob's Computer - MEAN stack
+;===========================================
+*/
+
 .row{
     padding-top: 100px;
     padding-left: 10%;
@@ -13,7 +22,7 @@ float: left;
 }
 
 ul, li{
-    list-style-type: none;    
+    list-style-type: none;
 }
 
 li{
