--- a/src/app/pages/user-registration/user-registration.component.css
+++ b/src/app/pages/user-registration/user-registration.component.css
@@ -6,6 +6,7 @@
 ; Description: End-to-end billing system for Bob's Computer - MEAN stack
 ;===========================================
 */
+
 small {
   color: red;
   display: block;
@@ -27,7 +28,7 @@ small {
 }
 
 .autoMargin {
-  margin: 4px auto;
+  margin: 0 auto;
 }
 
 .addressInput {
