--- a/src/app/pages/user-registration/user-registration.component.html
+++ b/src/app/pages/user-registration/user-registration.component.html
@@ -6,6 +6,7 @@
 ; Description: End-to-end billing system for Bob's Computer - MEAN stack
 ;===========================================
 -->
+
 <div class="container">
   <mat-card class="form">
     <mat-card-content>
@@ -34,9 +35,9 @@
                 aria-labelledby="headingCredentials"
                 data-parent="#accordionUserReg"
               >
-                <div class="card-body">
+                <div class="card-body autoMargin">
+                  <div class="autoMargin">
                   <small *ngIf="errorMessage">{{ errorMessage }}</small>
-                  <div class="credentialsRow">
                     <mat-form-field class="formInput">
                       <input
                         type="text"
@@ -67,8 +68,6 @@
                       "
                       >Username required</small
                     >
-                  </div>
-                  <div class="credentialsRow">
                     <mat-form-field class="formInput">
                       <input
                         type="password"
@@ -91,7 +90,7 @@
                       "
                       >Password Does Not Meet Requirements</small
                     >
-                  </div>
+                </div>
                 </div>
               </div>
             </div>
@@ -116,9 +115,9 @@
                 aria-labelledby="headingPersonalInfo"
                 data-parent="#accordionUserReg"
               >
-                <div class="card-body">
+                <div class="card-body autoMargin">
                   <small *ngIf="errorMessage">{{ errorMessage }}</small>
-                  <div class="credentialsRow">
+                  <div class="autoMargin">
                     <mat-form-field class="formInput">
                       <input
                         type="text"
@@ -150,7 +149,6 @@
                       >Last Name Required</small
                     >
                   </div>
-                  <div class="credentialsRow">
                     <mat-form-field class="formInput">
                       <input
                         type="tel"
@@ -166,6 +164,7 @@
                       "
                       >Phone Number Required</small
                     >
+                </div>
                     <address class="formInput">
                       <mat-form-field class="addressInput">
                         <input
@@ -228,7 +227,6 @@
                         >Zip Code Required</small
                       >
                     </address>
-                  </div>
                 </div>
               </div>
             </div>
@@ -255,16 +253,18 @@
                 aria-labelledby="headingSecurityQuestions"
                 data-parent="#accordionUserReg"
               >
-                <div class="card-body">
+                <div class="card-body autoMargin">
+                    <div class="autoMargin">
                   <!-- security question 1 -->
                   <mat-form-field class="formInput">
+                      <mat-label>First Security Question</mat-label>
                     <mat-select
                       [formControl]="form.controls['securityQuestionOne']"
                       name="securityQuestionOne"
                     >
                       <mat-option
                         *ngFor="let question of securityQuestions"
-                        [value]="question._id"
+                        [value]="question.question"
                       >
                         {{ question.question }}
                       </mat-option>
@@ -281,13 +281,14 @@
 
                   <!-- security question 2 -->
                   <mat-form-field class="formInput">
+                      <mat-label>Second Security Question</mat-label>
                     <mat-select
                       [formControl]="form.controls['securityQuestionTwo']"
                       name="securityQuestionTwo"
                     >
                       <mat-option
                         *ngFor="let question of securityQuestions"
-                        [value]="question._id"
+                        [value]="question.question"
                       >
                         {{ question.question }}
                       </mat-option>
@@ -304,13 +305,14 @@
 
                   <!-- security question 3 -->
                   <mat-form-field class="formInput">
+                      <mat-label>Third Security Question</mat-label>
                     <mat-select
                       [formControl]="form.controls['securityQuestionThree']"
                       name="securityQuestionThree"
                     >
                       <mat-option
                         *ngFor="let question of securityQuestions"
-                        [value]="question._id"
+                        [value]="question.question"
                       >
                         {{ question.question }}
                       </mat-option>
