--- a/src/app/pages/user-registration/user-registration.component.css
+++ b/src/app/pages/user-registration/user-registration.component.css
@@ -15,15 +15,9 @@ small {
   margin-top: 10px;
 }
 
-/* .credentialsRow {
-  width: 100%;
-  margin: 4px auto;
-  display: block;
-} */
-
 .formInput {
-  width: 80%;
-  padding: 0px 10px;
+  width: 100%;
+  /* padding: 0px 10px; */
 
 }
 
