--- a/src/app/pages/forgot-password/forgot-password.component.css
+++ b/src/app/pages/forgot-password/forgot-password.component.css
@@ -6,16 +6,31 @@
 ; Description: End-to-end billing system for Bob's Computer - MEAN stack
 ;===========================================
 */
-
-.nfBox {
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    width: 25%;
-    border: 0.5em black;
-    text-align: center;
+mat-card {
     margin-top: 100px;
-}
-body {
+    min-width: 25%;
+    max-width: 50%;
     text-align: center;
 }
+
+h6 {
+    color: red;
+}
+
+.error {
+    color: red;
+}
+
+mat-form-field {
+    width: 90%
+}
+
+mat-card-content {
+    margin: 5px;
+}
+
+button {
+    display: inline-block;
+    min-width: 25%;
+}
+
