--- a/src/app/pages/error-interceptor/error-interceptor.component.css
+++ b/src/app/pages/error-interceptor/error-interceptor.component.css
@@ -7,15 +7,10 @@
 ;===========================================
 */
 
-.nfBox {
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    width: 25%;
-    border: 0.5em black;
-    text-align: center;
-    margin-top: 100px;
+button {
+    margin: auto;
 }
-body {
+
+h1, p {
     text-align: center;
 }
