--- a/src/app/pages/error-interceptor/error-interceptor.component.html
+++ b/src/app/pages/error-interceptor/error-interceptor.component.html
@@ -1,21 +1,14 @@
-/*
+<!-- /*
 ============================================
 ; Title: WEB	450	Bob’s	Computer	Repair	Shop
 ; Author: Ethan Townsend, Lea Trueworthy, Natasha Whitmer, and Jason Sullenger
 ; Date: 17 October 2019
 ; Description: End-to-end billing system for Bob's Computer - MEAN stack
 ;===========================================
-*/
+*/ -->
 
-.nfBox {
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    width: 25%;
-    border: 0.5em black;
-    text-align: center;
-    margin-top: 100px;
-}
-body {
-    text-align: center;
-}
+<h1 mat-dialog-title>An Error has occured.</h1>
+<div mat-dialog-content><p class='mat-body-1'>{{ data.message }}</p></div>
+<div mat-dialog-actions>
+    <button mat-raised-button mat-dialog-close color='primary'><mat-icon>keyboard_return</mat-icon></button>
+</div>
