changed password to be not clear text

--- a/src/app/pages/forgot-password/forgot-password.component.html
+++ b/src/app/pages/forgot-password/forgot-password.component.html
@@ -70,7 +70,7 @@
         <form [formGroup]='resetPassword' #newPassword='ngForm' (ngSubmit)='onReset(resetPassword.value)'>
             <mat-card-content>
                     <mat-form-field>
-                            <input matInput type='text' placeholder='enter your new password' formControlName='password' [(ngModel)]='updatePassword' id='password'>
+                            <input matInput type='password' placeholder='enter your new password' formControlName='password' [(ngModel)]='updatePassword' id='password'>
                     </mat-form-field>
 
                     <div class="error" *ngIf="
@@ -83,7 +83,7 @@
                         </div>
                     </div>
                     <mat-form-field>
-                            <input matInput type='text' placeholder='confirm password' formControlName='confirmPassword' [(ngModel)]='confirmNewPassword' id='confirmPassword'>
+                            <input matInput type='password' placeholder='confirm password' formControlName='confirmPassword' [(ngModel)]='confirmNewPassword' id='confirmPassword'>
                     </mat-form-field>
 
                     <div class="error" *ngIf="
