--- a/src/app/pages/forgot-password/forgot-password.component.html
+++ b/src/app/pages/forgot-password/forgot-password.component.html
@@ -45,15 +45,15 @@
         <br/>
         <mat-card-content>
             <div *ngFor='let question of securityQuestions.result.security_questions'>
-                <mat-card-content>{{ question.question_id }}</mat-card-content>
+                <mat-card-content>{{ question.question_text }}</mat-card-content>
                 <mat-form-field>
                     <input matInput type='text' placeholder='answer' [(ngModel)]='user_answer'>
                 </mat-form-field>
-                <mat-card-content>{{ question.question_id1 }}</mat-card-content>
+                <mat-card-content>{{ question.question_text1 }}</mat-card-content>
                 <mat-form-field>
                      <input matInput type='text' placeholder='answer' [(ngModel)]='user_answer1'>
                 </mat-form-field>
-                <mat-card-content>{{ question.question_id2 }}</mat-card-content>
+                <mat-card-content>{{ question.question_text2 }}</mat-card-content>
                 <mat-form-field>
                     <input matInput type='text' placeholder='answer' [(ngModel)]='user_answer2'>
                 </mat-form-field>
