removed timeline and letter, will update when i get home

--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -6,44 +6,7 @@
 ; Description: End-to-end billing system for Bob's Computer - MEAN stack
 ;===========================================
 -->
-
-<html>
-<ol>
-    <li>
-        <p class="diplome">August 14</p>
-        <span class="point"></span>
-        <p class="description">Prototype</p>
-    </li>
-    <li>
-        <p class="diplome">August 20</p>
-        <span class="point"></span>
-        <p class="description">Code</p>
-    </li>
-    <li>
-        <p class="diplome">September 5</p>
-        <span class="point"></span>
-        <p class="description">Test</p>
-    </li>
-    <li>
-        <p class="diplome">September 6</p>
-        <span class="point"></span>
-        <p class="description">Address Issues</p>
-    </li>
-    <li>
-        <p class="diplome">September 10-11</p>
-        <span class="point"></span>
-        <p class="description"> Test </p>
-    </li>
-    <li>
-        <p class="diplome">September 22</p>
-        <span class="point"></span>
-        <p class="description"> Deploy </p>
-    </li>
-</ol>
-<br />
-<br />
 <div class="about" id="about">
-
     <mat-card class="example-card">
         <mat-card-title>
             <h1>Bob's Story</h1><br>
@@ -53,42 +16,10 @@
         </mat-card-subtitle>
         <img src="/assets/images/gadgets.jpg" alt="" style=" width:35%">
 
-        <h6>To best understand our family and where we began is a letter from my father, Peter to his father, Bob.
-            This is how our story begins:</h6>
+        <h6>Stuff and Things</h6>
         <br />
         <mat-card-content style="text-align: left">
-
-            <p> Dad,
-                <br />
-                <br>
-                I don't feel I was particularly honest as a child. I did get in trouble when I was younger more often
-                then I
-                would like to admit but that eventually allowed me to join you in your favorite hobby. I know you
-                brought me
-                along so I would stay out of trouble but watching you work on electronics really inspired me, even
-                though I
-                pretended I didn’t care. Over those years I grow to enjoy building, breaking, and tuckering with all
-                sorts
-                of electrons with you. Those really were some of best years of my life, so far.
-                <br />
-                <br>
-                As you know, I have been out of school long enough to know what I want to do with my life.
-                Now that I have grow and experienced some of the world, I am writing you this letter to ask an important
-                question. I want to ask you if you would join me by opening a computer repair store with me. Before you
-                answer, I do have a small condition. I would like to name the shop after you. You have inspired me and
-                encouraged me for as long as I can remember. Now I would like to make you proud (and mom, of course).
-                <br />
-                <br>
-                Hopefully this letter with arrive before I do but I know you will be proud of me regardless of what you
-                decide. I can’t wait to see you and mom and have some of delicious apple pie.
-                <br />
-                <br>
-                Your son,
-            </p>
-            <p style="color:#e7c661"> Peter <br />
-            </p>
+            <p>Going to add new about us tonight.</p>
         </mat-card-content>
     </mat-card>
 </div>
-
-</html>
