--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -42,16 +42,16 @@
             <mat-icon>account_circle</mat-icon>
             <span>My Profile</span>
           </button>
-          <button *ngIf='isAdmin == true' mat-menu-item (click)="navManagement()">
+          <button mat-menu-item (click)="navManagement()">
             <mat-icon>perm_contact_calendar</mat-icon>
             <span>User Management</span>
           </button>
-          <button *ngIf='isAdmin == true' mat-menu-item (click)="navRoleConf()">
+          <button mat-menu-item (click)="navRoleConf()">
             <mat-icon>perm_contact_calendar</mat-icon>
             <span>Role Configuration</span>
           </button>
           <!-- Modied user list to be security questions -->
-          <button *ngIf='isAdmin == true' mat-menu-item (click)="navSecQ()">
+          <button mat-menu-item (click)="navSecQ()">
             <mat-icon>lock</mat-icon>
             <span>Security Questions</span>
           </button>
