modified about/contact us info

--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -9,17 +9,28 @@
 <div class="about" id="about">
     <mat-card class="example-card">
         <mat-card-title>
-            <h1>Bob's Story</h1><br>
+            <h1>Bob's Computer Repair Shop</h1><br>
         </mat-card-title>
         <mat-card-subtitle>
-            <h5>Founded in 1989</h5>
+            <h5>Founded in 2287</h5>
         </mat-card-subtitle>
         <img src="/assets/images/gadgets.jpg" alt="" style=" width:35%">
-
-        <h6>Stuff and Things</h6>
         <br />
-        <mat-card-content style="text-align: left">
-            <p>Going to add new about us tonight.</p>
+        <mat-card-content style="text-align: center">
+            <p>In the year 2287 Bob’s Computer Repair Shop began setup in Vault 450.  Robert Ghouls 
+                (who went by ‘Bob’ while completing business related sales) and his wife and kids 
+                set off to start their new life.  Prior to setting up shop, the family had owned a 
+                smaller repair station ‘ECHO’, selling old technology and hardware on the black market.  
+                A majority of their sales at that time came from selling ancient alien technology the
+                family had been collecting for years.  The big turning point in Robert’s career was the
+                nuclear devastation that occurred in 2077.  This event was life changing for all of America
+                as everyone was pushed underground to live in hiding.</p>
+                <br />
+            <p>Robert and his family began a new strategy to live and joined the world in becoming bandits.  
+                Robert’s wife Lilith became an expert in robotics and soon was one of the best known mechanics 
+                underground.  As word passed through the millions of vaults, the Ghoul’s family decided to 
+                open up shop.  Being so versed in old and new technology, the family was able to thrive enough 
+                to not have to make a living through bounties and thieving.</p>
         </mat-card-content>
     </mat-card>
 </div>
