--- a/src/app/pages/contact-us/contact-us.component.html
+++ b/src/app/pages/contact-us/contact-us.component.html
@@ -9,11 +9,9 @@
 
 <div class="row">
     <mat-card class="col">
+        <h2>Can't open Pandora's Box?  Need your ECHO recorder reset?</h2>
         <br />
-
-        <h2>We would love to hear from you!</h2>
-        <p>Not sure where happened to your computer? Don't remember that large crack on your phone screen? Luckily, our
-            team is here to help! Stop by the store or give us a call to see what we can do for you. </p> <br />
+        <p>We are always open!</p>
 
     </mat-card>
     <mat-card class="col">
@@ -22,13 +20,13 @@
         <br />
         <ul>
             <li>
-                <h5>1000 Galvin Rd S, </h5>
+                <h5>Vault 450</h5>
             </li>
             <li>
-                <h5> Bellevue, NE 68005 </h5>
+                <h5>Pandora</h5>
             </li>
             <li>
-                <h5>1-555-555-9876</h5>
+                <h5>555-0123</h5>
             </li>
             <li>
                 <h5>bobscomputershop@teamtaco.com</h5>
