--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -2,35 +2,44 @@
   ============================================
 ; Title: WEB	450	Bob’s	Computer	Repair	Shop
 ; Author: Ethan Townsend, Lea Trueworthy, Natasha Whitmer, and Jason Sullenger
+; Image: https://www.needpix.com/photo/98364/bomb-explosion-explosive-nuclear-nuke-weapon
 ; Date: 17 October 2019
 ; Description: End-to-end billing system for Bob's Computer - MEAN stack
 ;===========================================
 -->
-<div class="about" id="about">
-    <mat-card class="example-card">
+<div class="row" id="about">
+    <mat-card class="col">
         <mat-card-title>
             <h1>Bob's Computer Repair Shop</h1><br>
         </mat-card-title>
         <mat-card-subtitle>
             <h5>Founded in 2287</h5>
         </mat-card-subtitle>
-        <img src="/assets/images/gadgets.jpg" alt="" style=" width:35%">
         <br />
-        <mat-card-content style="text-align: center">
-            <p>In the year 2287 Bob’s Computer Repair Shop began setup in Vault 450.  Robert Ghouls 
-                (who went by ‘Bob’ while completing business related sales) and his wife and kids 
-                set off to start their new life.  Prior to setting up shop, the family had owned a 
-                smaller repair station ‘ECHO’, selling old technology and hardware on the black market.  
-                A majority of their sales at that time came from selling ancient alien technology the
-                family had been collecting for years.  The big turning point in Robert’s career was the
-                nuclear devastation that occurred in 2077.  This event was life changing for all of America
-                as everyone was pushed underground to live in hiding.</p>
-                <br />
-            <p>Robert and his family began a new strategy to live and joined the world in becoming bandits.  
-                Robert’s wife Lilith became an expert in robotics and soon was one of the best known mechanics 
-                underground.  As word passed through the millions of vaults, the Ghoul’s family decided to 
-                open up shop.  Being so versed in old and new technology, the family was able to thrive enough 
-                to not have to make a living through bounties and thieving.</p>
-        </mat-card-content>
+        <img src="/assets/images/explosion.png" alt="" style=" width:50%">
+    </mat-card>
+    
+    <mat-card class="col" style="text-align: center">
+        <p>In the year 2287 Bob’s Computer Repair Shop began their steps to setup shop in Vault 450.  
+            Robert Ghouls (Bob), his wife, and their kids began to enjoy their new life underground.  
+            Prior to setting up shop, the family had owned a smaller repair station called Echo.  
+            Echo became one of the best known shops known for selling old technology and hardware on 
+            the black market.  </p>
+        <br />
+        <p>What their customers didn’t know was a majority of their sales at that 
+            time came from selling ancient alien technology the family had been collecting over the years 
+            from time travel.  Robert’s wife Lilith was an engineer of her own.  She had created a time 
+            machine originally to stop the rich from taking all technology for themselves.  Back in 1997
+            just as computers were starting to be relevant, Lilith and her team took to the time line to make 
+            technology open to for all.</p>
+        <br />
+        <p>As the years came and went, the Ghoul's family's big turning point was the nuclear devastation that 
+            occurred in 2019.  This event was life changing for all of America as everyone was pushed 
+            underground to live in hiding.  Robert and his family began a new strategy to live and 
+            joined the world in becoming technical experts in every field possible.  Lilith became an 
+            expert in robotics and soon was one of the best known mechanics underground.  As word passed 
+            through the millions of vaults, the Ghoul’s family was able to reopen shop.  Being so versed 
+            in old and new technology, the family was able to open Bob’s Computer Repair Shop and strive 
+            for new goals.</p>
     </mat-card>
 </div>
